vlib/v/checker/tests/function_count_of_args_mismatch_err.out
vlib/v/checker/tests/function_count_of_args_mismatch_err.vv:1:9: notice: unused parameter: `b`
    1 | fn test(b bool) {
      |         ^
    2 | }
    3 |
vlib/v/checker/tests/function_count_of_args_mismatch_err.vv:4:13: notice: unused parameter: `b`
    2 | }
    3 | 
    4 | fn test2[T](b bool, v T) {
      |             ^
    5 | }
    6 |
vlib/v/checker/tests/function_count_of_args_mismatch_err.vv:4:21: notice: unused parameter: `v`
    2 | }
    3 | 
    4 | fn test2[T](b bool, v T) {
      |                     ^
    5 | }
    6 |
vlib/v/checker/tests/function_count_of_args_mismatch_err.vv:8:13: error: expected 1 argument, but got 3
    6 | 
    7 | fn main() {
    8 |     test(true, false, 1)
      |                ~~~~~~~~
    9 |     test()
   10 |     test2(true, false, 1)
Details: have (bool, bool, int literal)
         want (bool)
vlib/v/checker/tests/function_count_of_args_mismatch_err.vv:9:2: error: expected 1 argument, but got 0
    7 | fn main() {
    8 |     test(true, false, 1)
    9 |     test()
      |     ~~~~~~
   10 |     test2(true, false, 1)
   11 |     test2(true)
Details: have ()
         want (bool)
vlib/v/checker/tests/function_count_of_args_mismatch_err.vv:10:21: error: expected 2 arguments, but got 3
    8 |     test(true, false, 1)
    9 |     test()
   10 |     test2(true, false, 1)
      |                        ^
   11 |     test2(true)
   12 | }
Details: have (bool, bool, int literal)
         want (bool, T)
vlib/v/checker/tests/function_count_of_args_mismatch_err.vv:11:2: error: expected 2 arguments, but got 1
    9 |     test()
   10 |     test2(true, false, 1)
   11 |     test2(true)
      |     ~~~~~~~~~~~
   12 | }
Details: have (bool)
         want (bool, T)
